--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -11,8 +11,8 @@
     <link rel="manifest" href="{{url "/manifest.json"}}">
     <link rel="mask-icon" href="{{url "/safari-pinned-tab.svg"}}" color="#003367">
     <meta name="theme-color" content="#003367">
-    
-    <title>{{block "title" .}}{{.PageContext.LongName}}{{end}}</title>   
+
+    <title>{{block "title" .}}{{.PageContext.LongName}}{{end}}</title>
 
     {{block "open-graph" .}}
     <meta name="twitter:card" content="summary_large_image">
@@ -39,9 +39,9 @@
     <script src="https://use.fontawesome.com/577e6fdb00.js"></script>
 </head>
 <body>
-
-{{template "header" .}}
-
+{{block "header-block" .}}
+    {{template "header" .}}
+{{end}}
 
 {{block "content" .}}
 <div class="container container-padded">
@@ -50,8 +50,9 @@
 </div>
 {{end}}
 
-{{template "footer" .}}
-
+{{block "footer-block" .}}
+    {{template "footer" .}}
+{{end}}
 <script src="{{url "/js/jquery-3.1.1.min.js"}}"></script>
 <script src="{{url "/js/main.js"}}"></script>
 <!-- TODO: Move to local copy of these -->
