--- a/views/podcasts.tmpl
+++ b/views/podcasts.tmpl
@@ -1,4 +1,4 @@
-{{define "title"}}{{.PageContext.ShortName}} | URYPlayer: Podcasts{{end}}
+{{define "title"}}{{.PageContext.ShortName}} | URYPlayer | Podcasts{{end}}
 {{define "content"}}
 {{with .PageData}}
 
