--- a/sass/main.scss
+++ b/sass/main.scss
@@ -113,7 +113,7 @@ footer {
     background-size: cover;
     position: absolute;
     width: 100%;
-  }  
+  }
 }
 
 .card .card-img-top.rounded-circle {
@@ -130,6 +130,43 @@ footer {
 .user-on-demand {
   background-color: $secondary-color;
   color: white;
+}
+
+.on-demand {
+  background: url("/images/bg-banner-2.jpg") center center no-repeat;
+  background-size: cover;
+  color: white;
+  padding: 10em 0;
+}
+
+.section-title {
+  color: white;
+  margin-top: -8em;
+
+  .section-title-text .od-brand {
+    color: $primary-color;
+    display: inline-block;
+  }
+
+}
+
+.uryplayer-podcast {
+  border: 2px solid rgba(0,0,0,.1);
+  .section.img {
+    padding-right:0;
+    .podcast-img {
+      height: 100vh;
+    }
+  }
+  .section.info {
+    border-bottom: 2px solid rgba(0,0,0,.1);
+    .podcast-title {
+      font-size: 1.5rem;
+    }
+  }
+  .podcast-audio {
+    width: 100%;
+  }
 }
 
 .page404 {
