--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,6 +4,7 @@ $font-family-heading: "Raleway", sans-serif;
 * {
   font-family: $font-family-body;
   font-weight: 300;
+  font-variant-ligatures: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
