remove useless prints; fix back link

--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -86,7 +86,7 @@
   <div class="container container-padded">
     <h1>Sign up today!</h1>
     <hr>
-    <form name="getInvolvedForm" class="form-getinvolved" action="/signup/">
+    <form id="getInvolvedForm" class="form-getinvolved" action="/signup/">
       <div class="row">
         <fieldset id="getinvolved-personal-details" class="col-md-6">
           <legend>I'm…</legend>
