Improve show pages and make the message box work (#74)
* remove index schedule, to be added at a later date

* Add credits with credit name to show page WIP

* Improve scaling of show pages

* correct tags

* improve padding

* improve how current and next area scales on mobile

* Add new credits to the timeslot

* give some love to codacy

* Fix some codacy stuff

* tabs to spaces

* add message box

* tidy up message box

* use named returns

* fix some linting things

* add missing semi colon and change log to error

* add comment for eslint

this should work..maybe...idk

* add eslint comment for console error

* add info when tracklist is not there

* move eslint to comment

* update ES comment

--- a/sass/elements/_currentAndNext.scss
+++ b/sass/elements/_currentAndNext.scss
@@ -2,7 +2,15 @@
   background: url("/images/bg-banner-1.jpg") center center no-repeat;
   background-size: cover;
   color: white;
-  padding: 10em 0;
+
+  // Padding for mobile
+  padding: calc(5em + 60px) 0 5em;
+
+  // Padding for desktop
+  @include media-breakpoint-up(md) {
+    // Remove the height of the nav bar roughly 60px
+    padding: calc(8em + 60px) 0 8em;
+  }
 }
 
 .current-and-next {
