Add wrapper around the show credits

--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -50,7 +50,8 @@
     </div>
   </div>
 </div>
-<div class="container-fluid bg-third">
+{{if .CreditsToUsers}}
+<div class="container-fluid bg-secondary">
   <div class="container pt-3">
     <h2>Credits</h2>
     <hr>
@@ -66,6 +67,7 @@
     </div>
   </div>
 </div>
+{{end}}
 <div class="container-fluid">
   <div class="container pt-3">
     <div class="row">
