Made feedback consistent; changed slack logo image

--- a/views/signedup.tmpl
+++ b/views/signedup.tmpl
@@ -64,9 +64,9 @@
 
       <div class="col-md-3 bg-primary rounded">
         <br>
-        <img src="https://cdn-images-1.medium.com/max/1200/1*TiKyhAN2gx4PpbOsiBhYcw.png" class="img-fluid rounded" alt="Slack Logo">
+        <img src="/public/images/slack-logo.svg" class="img-fluid" alt="Slack Logo">
         <p></p>
-        <p class="text-center">Find the URY slack channel at <a href="http://ury.slack.com">ury.slack.com</a> and join all the channels you're interested in.</p>
+        <p class="text-center">Find the URY slack team at <a href="http://ury.slack.com">ury.slack.com</a> and join all the channels you're interested in.</p>
       </div>
 
       <div class="col-md-1"><br></div>
@@ -77,7 +77,7 @@
         <br>
         <p class="text-center">We have a calendar of <a href="https://goo.gl/5APK7Q">all our meetings</a>, to which new members are always welcome, and you can drop by the station almost any time and there'll be someone to talk to.</p>
         <br>
-        <p class="text-center">All of our meetings are held in Vanbrugh Arms (V&nbsp;Bar), which is right next to the radio station</p>
+        <p class="text-center">All of our team meetings are held in Vanbrugh Arms (V&nbsp;Bar), which is right next to the radio station</p>
         <br>
         <a class="text-center" href="/contact#map"><h3>Map of where to find us</h3></a>
       </div>
@@ -86,7 +86,7 @@
 
       <div class="col-md-3 bg-primary rounded">
         <br>
-        <img src="https://ury.org.uk/myradio/img/myradio-logo.svg" class="img-fluid rounded mx-auto d-block" alt="Slack Logo" style="margin-top: 30%; margin-bottom: 30%">
+        <img src="https://ury.org.uk/myradio/img/myradio-logo.svg" class="img-fluid rounded mx-auto d-block" alt="MyRadio Logo" style="margin-top: 30%; margin-bottom: 30%">
         <p></p>
         <p class="text-center">Once you get your confirmation email, you'll be able to log in to <a href="https://ury.org.uk/myradio/">MyRadio</a>. This is where you'll be able to book training, request shows and do other magical things.</p>
       </div>
