--- a/views/signedup.tmpl
+++ b/views/signedup.tmpl
@@ -52,7 +52,7 @@
 
       <div class="col-md-3 bg-primary rounded">
         <br>
-        <img src="/images/slack-logo.svg" class="img-fluid" alt="Slack Logo">
+        <img src="/images/slack-logo-white.png" class="img-fluid" alt="Slack Logo">
         <p></p>
         <p class="text-center">Find the URY slack team at <a href="http://ury.slack.com">ury.slack.com</a> and join all the channels you're interested in.</p>
       </div>
