--- a/sass/main.scss
+++ b/sass/main.scss
@@ -290,3 +290,9 @@ footer {
   padding-bottom: 22.25%;
   padding-top: 30px;
 }
+
+// Get involved form
+.neg-margin {
+  margin-left: -15px;
+  margin-right: -15px;
+}
