--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -69,74 +69,82 @@
 </div>
 <div class="container-fluid container-padded  bg-third">
   <div class="container container-padded">
-      <h2>How Do I Join?</h2>
-      <p>If you’re ready to join URY right now, we have some very easy steps to get you started...</p>
-      <dl>
-        <dt>Pay Membership</dt>
-        <dd>The easiest way to pay membership is through the <a href="//yusu.org/groups/university-radio-york/" target="_blank">yusu.org</a> website.</dd>
-        <dt>Sign Up To MyRadio</dt>
-        <dd>MyRadio is our computer system for managing shows, members, and our mailing list. You can join MyRadio by completing the form below, it’s instant and of course there’s no commitment to do anything.</li>
-        <dt>Join Our Slack Team</dt>
-        <dd>Use <a href="//slack.com/is" title="Find out more about Slack!" target="_blank">Slack</a>; it's like Facebook Messenger but for URY team communication. Slack has the advantage of having a “channel” for each team, so you can join any channel and see what is happening. Our Slack team: <a href="//ury.slack.com" title="Join Our Slack Team" target="_blank">ury.slack.com</a> sign up using your university email address.</dd>
-      </dl>
-      <p>You can also come and <a href="{{url "/contact#map"}}" title="Contact us page">visit our station</a> in Vanbrugh College, where there'll almost always be someone there to talk to you and get you set up.</p>
+    <div class="row">
+      <h2>How Do I Join?</h2><br>
+      <div> <!-- Prevents bug where p would appear inline with h2 -->
+        <p>If you’re ready to join URY right now, we have some very easy steps to get you started...</p>
+        <dl>
+          <dt>Pay Membership</dt>
+          <dd>The easiest way to pay membership is through the <a href="//yusu.org/groups/university-radio-york/" target="_blank">yusu.org</a> website.</dd>
+          <dt>Sign Up To MyRadio</dt>
+          <dd>MyRadio is our computer system for managing shows, members, and our mailing list. You can join MyRadio by completing the form below, it’s instant and of course there’s no commitment to do anything.</dd>
+          <dt>Join Our Slack Team</dt>
+          <dd>Use <a href="//slack.com/is" title="Find out more about Slack!" target="_blank">Slack</a>; it's like Facebook Messenger but for URY team communication. Slack has the advantage of having a “channel” for each team, so you can join any channel and see what is happening. Our Slack team: <a href="//ury.slack.com" title="Join Our Slack Team" target="_blank">ury.slack.com</a> sign up using your university email address.</dd>
+        </dl>
+        <p>You can also come and <a href="{{url "/contact#map"}}" title="Contact us page">visit our station</a> in Vanbrugh College, where there'll almost always be someone there to talk to you and get you set up.</p>
+      </div>
+    </div>
   </div>
 </div>
 <div class="container-fluid container-padded bg-secondary" id="signUp">
-  <div class="container container-padded">
-    <h1>Sign up today!</h1>
-    <hr>
-    <form id="getInvolvedForm" class="form-getinvolved" action="/signup/">
-      <div class="row">
-        <fieldset id="getinvolved-personal-details" class="col-md-6">
-          <legend>I'm…</legend>
-          <div class="form-group">
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" name="fname" class="form-control">
+  <div class="container container-unpadded">
+    <div class="neg-margin">
+      <h1>Sign up today!</h1>
+      <div>
+        <hr>
+        <form id="getInvolvedForm" class="form-getinvolved" action="/signup/">
+          <div class="row">
+            <fieldset id="getinvolved-personal-details" class="col-md-6">
+              <legend>I'm…</legend>
+              <div class="form-group">
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="fname" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="sname">Last Name</label>
+                <input type="text" id="sname" name="sname" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="text">York Email</label>
+                <div class="input-group">
+                  <input type="text" id="eduroam" name="eduroam" class="form-control" placeholder="abc123">
+                  <span class="input-group-addon">@york.ac.uk</span>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="phone">Phone Number (Optional)</label>
+                <input type="text" id="phone" name="phone" class="form-control">
+              </div>
+              <div class="form-group">
+                  <label for="college">College</label>
+                  <select id="college" name="college" class="form-control">
+                    <option value="10">Unknown</option>
+                    <option value="1">Alcuin</option>
+                    <option value="11">Constantine</option>
+                    <option value="2">Derwent</option>
+                    <option value="3">Goodricke</option>
+                    <option value="4">Halifax</option>
+                    <option value="5">James</option>
+                    <option value="6">Langwith</option>
+                    <option value="7">Vanbrugh</option>
+                    <option value="8">Wentworth</option>
+                  </select>
+              </div>
+            </fieldset>
+            <fieldset id="getinvolved-interest" class="col-md-6">
+              <legend>I'm interested in the…</legend>
+              {{range $listID, $Team := .ListTeamMap}}
+                <input type="checkbox" name="interest" id="interest-{{$Team.Alias}}" value="{{$listID}}">
+                <label for="interest-{{$Team.Alias}}" title="{{html $Team.Description}}">{{$Team.Name}}</label>
+                <br>
+              {{end}}
+              <br>
+              <input type="submit" class="form-control submit-sit-bottom">
+            </fieldset>
           </div>
-          <div class="form-group">
-            <label for="sname">Last Name</label>
-            <input type="text" id="sname" name="sname" class="form-control">
-          </div>
-          <div class="form-group">
-            <label for="text">York Email</label>
-            <div class="input-group">
-              <input type="text" id="eduroam" name="eduroam" class="form-control" placeholder="abc123">
-              <span class="input-group-addon">@york.ac.uk</span>
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="phone">Phone Number (Optional)</label>
-            <input type="text" id="phone" name="phone" class="form-control">
-          </div>
-          <div class="form-group">
-              <label for="college">College</label>
-              <select id="college" name="college" class="form-control">
-                <option value="10">Unknown</option>
-                <option value="1">Alcuin</option>
-                <option value="11">Constantine</option>
-                <option value="2">Derwent</option>
-                <option value="3">Goodricke</option>
-                <option value="4">Halifax</option>
-                <option value="5">James</option>
-                <option value="6">Langwith</option>
-                <option value="7">Vanbrugh</option>
-                <option value="8">Wentworth</option>
-              </select>
-          </div>
-        </fieldset>
-        <fieldset id="getinvolved-interest" class="col-md-6">
-          <legend>I'm interested in the…</legend>
-          {{range $listID, $Team := .ListTeamMap}}
-            <input type="checkbox" name="interest" id="interest-{{$Team.Alias}}" value="{{$listID}}">
-            <label for="interest-{{$Team.Alias}}" title="{{html $Team.Description}}">{{$Team.Name}}</label>
-            <br>
-          {{end}}
-          <br>
-          <input type="submit" class="form-control">
-        </fieldset>
+        </form>
       </div>
-    </form>
+    </div>
   </div>
 </div>
 {{end}}
