--- a/views/signedup.tmpl
+++ b/views/signedup.tmpl
@@ -52,9 +52,12 @@
 
       <div class="col-md-3 bg-primary rounded">
         <br>
-        <img src="/images/slack-logo-white.png" class="img-fluid" alt="Slack Logo">
+        <div class="card-logo-container">
+          <img src="/images/slack-logo-white.png" class="img-fluid mx-auto d-block" alt="Slack Logo">
+        </div>
         <p></p>
         <p class="text-center">Find the URY slack team at <a href="http://ury.slack.com">ury.slack.com</a> and join all the channels you're interested in.</p>
+        <br>
       </div>
 
       <div class="col-md-1"><br></div>
@@ -68,15 +71,19 @@
         <p class="text-center">All of our team meetings are held in Vanbrugh Arms (V&nbsp;Bar), which is right next to the radio station</p>
         <br>
         <a class="text-center" href="/contact#map"><h3>Map of where to find us</h3></a>
+        <br>
       </div>
 
       <div class="col-md-1"><br></div>
 
       <div class="col-md-3 bg-primary rounded">
         <br>
-        <img src="https://ury.org.uk/myradio/img/myradio-logo.svg" class="img-fluid rounded mx-auto d-block" alt="MyRadio Logo" style="margin-top: 30%; margin-bottom: 30%">
+        <div class="card-logo-container">
+          <img src="https://ury.org.uk/myradio/img/myradio-logo.svg" class="img-fluid mx-auto d-block" alt="MyRadio Logo" style="height: 15rem;">
+        </div>
         <p></p>
         <p class="text-center">Once you get your confirmation email, you'll be able to log in to <a href="https://ury.org.uk/myradio/">MyRadio</a>. This is where you'll be able to book training, request shows and do other magical things.</p>
+        <br>
       </div>
 
     </div>
