--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -2,13 +2,13 @@
 {{define "open-graph"}}
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@{{.PageContext.MainTwitter}}">
-<meta name="twitter:creator" content="@{{.PageContext.MainTwitter}}"> 
+<meta name="twitter:creator" content="@{{.PageContext.MainTwitter}}">
 <meta property="og:locale" content="en_GB">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Want to help York make incredible award winning radio?">
 <meta property="og:description" content="Want to join one of the best, largest and most diverse societies university has to offer? Whether you to hear your voice played out on the airwaves, break the biggest news stories as they happen, play with the state-of-the-art studios and computer systems, or just plain have fun, then URY is the place for you.">
 <meta property="og:image" content="{{.PageContext.FullURL}}{{url "/images/open_graph-get_involved.jpg"}}">
-<meta property="og:url" content="{{.PageContext.FullURL}}{{url "/getinvolved"}}">  
+<meta property="og:url" content="{{.PageContext.FullURL}}{{url "/getinvolved"}}">
 {{end}}
 
 {{define "content"}}
@@ -40,7 +40,6 @@
 </div>
 <div class="container-fluid container-padded ">
   <div class="container container-padded">
-    <div class="row">
       <h2>What Can I Do?</h2>
       <p>Of course, everyone wants to be on the radio! Presenting is as easy as baking a cake (disclaimer: I can't bake cakes)
         and you don't have to sign up at Freshers' Fair or at the start of a term to get your very own show!
@@ -49,12 +48,10 @@
       <p>As well as just presenting, there are <strong><a href="#" title="Have a look at what our teams do!">{{.NumTeams}} Teams</a></strong>
         of students that make content and keep URY running. You can see more about them at the bottom of this page.
       </p>
-    </div>
   </div>
 </div>
 <div class="container-fluid container-padded  bg-primary">
   <div class="container container-padded">
-    <div class="row">
       <h2>How Do I Get A Show?</h2>
       <div> <!-- Prevents bug where p would appear inline with h2 -->
         <p>Getting your own show is easy as pie! First thing is to make sure you are a paid member, you can do this through <a href="http://yusu.org" title="York University Students Union" target="_blank">YUSU</a>.</p>
@@ -65,11 +62,9 @@
         <p><strong>Easy peasy.</strong></p>
     </div>
     </div>
-  </div>
 </div>
 <div class="container-fluid container-padded  bg-third">
   <div class="container container-padded">
-    <div class="row">
       <h2>How Do I Join?</h2><br>
       <div> <!-- Prevents bug where p would appear inline with h2 -->
         <p>If you’re ready to join URY right now, we have some very easy steps to get you started...</p>
@@ -83,68 +78,65 @@
         </dl>
         <p>You can also come and <a href="{{url "/contact#map"}}" title="Contact us page">visit our station</a> in Vanbrugh College, where there'll almost always be someone there to talk to you and get you set up.</p>
       </div>
-    </div>
   </div>
 </div>
 <div class="container-fluid container-padded bg-secondary" id="signUp">
-  <div class="container container-unpadded">
-    <div class="neg-margin">
-      <h1>Sign up today!</h1>
-      <div>
-        <hr>
-        <form id="getInvolvedForm" class="form-getinvolved" action="/signup/">
-          <div class="row">
-            <fieldset id="getinvolved-personal-details" class="col-md-6">
-              <legend>I'm…</legend>
-              <div class="form-group">
-                <label for="fname">First Name</label>
-                <input type="text" id="fname" name="fname" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="sname">Last Name</label>
-                <input type="text" id="sname" name="sname" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="text">York Email</label>
-                <div class="input-group">
-                  <input type="text" id="eduroam" name="eduroam" class="form-control" placeholder="abc123">
-                  <span class="input-group-addon">@york.ac.uk</span>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="phone">Phone Number (Optional)</label>
-                <input type="text" id="phone" name="phone" class="form-control">
-              </div>
-              <div class="form-group">
-                  <label for="college">College</label>
-                  <select id="college" name="college" class="form-control">
-                    <option value="10">Unknown</option>
-                    <option value="1">Alcuin</option>
-                    <option value="11">Constantine</option>
-                    <option value="2">Derwent</option>
-                    <option value="3">Goodricke</option>
-                    <option value="4">Halifax</option>
-                    <option value="5">James</option>
-                    <option value="6">Langwith</option>
-                    <option value="7">Vanbrugh</option>
-                    <option value="8">Wentworth</option>
-                  </select>
-              </div>
-            </fieldset>
-            <fieldset id="getinvolved-interest" class="col-md-6">
-              <legend>I'm interested in the…</legend>
-              {{range $listID, $Team := .ListTeamMap}}
-                <input type="checkbox" name="interest" id="interest-{{$Team.Alias}}" value="{{$listID}}">
-                <label for="interest-{{$Team.Alias}}" title="{{html $Team.Description}}">{{$Team.Name}}</label>
-                <br>
-              {{end}}
-              <br>
-              <input type="submit" class="form-control submit-sit-bottom">
-            </fieldset>
+  <div class="container container-padded">
+    <h1>Sign up today!</h1>
+    <hr>
+    <form id="getInvolvedForm" class="form-getinvolved" action="/signup/">
+      <div class="row">
+        <fieldset id="getinvolved-personal-details" class="col-md-6">
+          <legend>I'm…</legend>
+          <div class="form-group">
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="fname" class="form-control">
           </div>
-        </form>
+          <div class="form-group">
+            <label for="sname">Last Name</label>
+            <input type="text" id="sname" name="sname" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="text">York Email</label>
+            <div class="input-group">
+              <input type="text" id="eduroam" name="eduroam" class="form-control" placeholder="abc123">
+              <span class="input-group-addon">@york.ac.uk</span>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="phone">Phone Number (Optional)</label>
+            <input type="text" id="phone" name="phone" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="college">College</label>
+            <select id="college" name="college" class="form-control">
+              <option value="10">Unknown</option>
+              <option value="1">Alcuin</option>
+              <option value="11">Constantine</option>
+              <option value="2">Derwent</option>
+              <option value="3">Goodricke</option>
+              <option value="4">Halifax</option>
+              <option value="5">James</option>
+              <option value="6">Langwith</option>
+              <option value="7">Vanbrugh</option>
+              <option value="8">Wentworth</option>
+            </select>
+          </div>
+        </fieldset>
+        <fieldset id="getinvolved-interest" class="col-md-6">
+          <legend>I'm interested in the…</legend>
+          {{range $listID, $Team := .ListTeamMap}}
+            <input type="checkbox" name="interest" id="interest-{{$Team.Alias}}" value="{{$listID}}">
+            <label for="interest-{{$Team.Alias}}" title="{{html $Team.Description}}">{{$Team.Name}}</label>
+            <br>
+          {{end}}
+          <br>
+        </fieldset>
       </div>
-    </div>
+      <div class="row justify-content-center">
+        <input type="submit" class="btn btn-primary btn-lg">
+      </div>
+    </form>
   </div>
 </div>
 {{end}}
