--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -45,6 +45,10 @@ $button-color: #fff;
     border-radius: 0;
   }
 
+	&.btn-lg {
+    font-size: 1.25rem;
+	}
+
   &.btn-xl {
     border-radius: .3em;
     font-size: 2rem;
