--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -31,15 +31,15 @@
                 <li>{{.Name}}</li>
               {{end}}
               </ul>
-            </div>    
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>  
-  <div id="index-videos" class="container-fluid container-padded bg-secondary">
+  </div>
+  <div id="index-videos" class="container-fluid pt-3 bg-secondary">
     <h2>URY Sessions</h2>
-    <div id="youtube-video-slider" class="row scroll-horiz">
+    <div id="youtube-video-slider" class="row scroll-horiz pb-3 custom-scrollbar">
     </div>
   </div>
   <div id="index-uryplayer" class="container-fluid container-padded bg-third">
