--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -23,6 +23,10 @@ html {
   }
 	&::-webkit-scrollbar-thumb {
     border-radius: 7.5px;
-    background: white;
-	}
+    background: rgba(255, 255, 255, 0.7);
+
+    &:hover {
+      background: rgba(255, 255, 255, 1);
+    }
+  }
 }
