404 page if not found or podcast not published.

--- a/views/podcast_player.tmpl
+++ b/views/podcast_player.tmpl
@@ -33,7 +33,7 @@
           <hr>
           <div class="col-12">
               <audio class="podcast-audio" controls>
-                <source src="https://ury.org.uk/media/{{.Podcast.File}}" type="audio/mpeg">
+                <source src="https://ury.org.uk{{.Podcast.File}}" type="audio/mpeg">
                 It looks like your browser can't play this file, please update your browser.
               </audio>
             </div>
