Cleaned up podcast styling.

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -42,25 +42,34 @@
     <div id="youtube-video-slider" class="row scroll-horiz">
     </div>
   </div>
-  <div id="index-uryplayer" class="container-fluid container-padded bg-third">
+  {{if .Podcasts}}
+  <div id="index-podcasts" class="container-fluid container-padded bg-third">
     <h2>Podcasts</h2>
     <div class="row scroll-horiz">
-			{{range .Podcasts}}
-      <div class="col-11 col-sm-7 col-md-3">
-				<a href="{{.MicrositeLink.URL}}" title="URY Podcast: {{.Title}}">
-					<div class="card podcast">
-						<img class="card-img-top img-fluid" src="https://ury.org.uk{{.Photo}}" alt="URY Podcast: {{.Title}}">
-						<div class="card-block bg-primary">
-							<h4 class="card-title ellipsis">{{.Title}}</h4>
-							<h5>{{.Time.Format "Monday, _2 Jan 2006"}}</h5>
-							<p class="card-text ellipsis">{{html .Description}}</p>
-						</div>
-					</div>
-				</a>
-			</div>
-			{{end}}
+      {{range .Podcasts}}
+      <div class="col-11 col-sm-7 col-md-3 col-lg-2">
+          <div class="card podcast bg-secondary">
+            <a href="{{.MicrositeLink.URL}}" title="URY Podcast: {{.Title}}">
+              <img class="card-img-top" src="https://ury.org.uk{{.Photo}}" alt="URY Podcast: {{.Title}}">
+            </a>
+            <div class="card-body bg-secondary">
+              <a href="{{.MicrositeLink.URL}}" title="URY Podcast: {{.Title}}">
+                <h4 class="card-title">{{.Title}}</h4>
+                <h5>{{.Time.Format "Monday, _2 Jan 2006"}}</h5>
+              </a>
+              <p class="card-text">{{html .Description}}</p>
+            </div>
+            <a href="{{.MicrositeLink.URL}}" title="URY Podcast: {{.Title}}">
+              <div class="card-footer bg-primary">
+                Listen Now
+              </div>
+            </a>
+          </div>
+      </div>
+      {{end}}
     </div>
-  </div> <!-- /outer containter -->
+  </div>
+  {{end}}
   {{end}}
 {{end}}
 
