Used POST request for form instead of GET That was surprisingly simple

--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -92,7 +92,7 @@
       <h1>Sign up today!</h1>
       <div>
         <hr>
-        <form id="getInvolvedForm" class="form-getinvolved" action="/signup/">
+        <form id="getInvolvedForm" class="form-getinvolved" action="/signup/" method="post">
           <div class="row">
             <fieldset id="getinvolved-personal-details" class="col-md-6">
               <legend>I'm…</legend>
