--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -53,7 +53,7 @@
 <div class="container-fluid container-padded  bg-primary">
   <div class="container container-padded">
       <h2>How Do I Get A Show?</h2>
-      <div> <!-- Prevents bug where p would appear inline with h2 -->
+      <div> {{/* Prevents bug where p would appear inline with h2 */}}
         <p>Getting your own show is easy as pie! First thing is to make sure you are a paid member, you can do this through <a href="http://yusu.org" title="York University Students Union" target="_blank">YUSU</a>.</p>
         <p>Once you have paid, log in to <a href="/myradio/">MyRadio</a> and set up an account, from there you will be able to sign up to training! Under "Get On Air",
           click "Get Studio Trained" and take your pick of training sessions you can attend, click join and you are good to go!
@@ -66,7 +66,7 @@
 <div class="container-fluid container-padded  bg-third">
   <div class="container container-padded">
       <h2>How Do I Join?</h2><br>
-      <div> <!-- Prevents bug where p would appear inline with h2 -->
+      <div> {{/* Prevents bug where p would appear inline with h2 */}}
         <p>If you’re ready to join URY right now, we have some very easy steps to get you started...</p>
         <dl>
           <dt>Pay Membership</dt>
