Change model to match myradio-go function rename Fix method param change for form from merge

--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -84,7 +84,7 @@
   <div class="container container-padded">
     <h1>Sign up today!</h1>
     <hr>
-    <form id="getInvolvedForm" class="form-getinvolved" action="/signup/">
+    <form id="getInvolvedForm" class="form-getinvolved" action="/signup/" method="post">
       <div class="row">
         <fieldset id="getinvolved-personal-details" class="col-md-6">
           <legend>I'm…</legend>
