--- a/sass/main.scss
+++ b/sass/main.scss
@@ -119,7 +119,7 @@ footer {
     background-size: cover;
     position: absolute;
     width: 100%;
-  }  
+  }
 }
 
 .card .card-img-top.rounded-circle {
@@ -294,4 +294,20 @@ footer {
   position: relative;
   padding-bottom: 22.25%;
   padding-top: 30px;
+}
+
+// Signed up page
+.card-logo-container {
+  height: 15rem;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  img {
+    max-width: 80%;
+    max-height: 80%;
+    width: auto;
+    height: auto;
+  }
 }
