--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -17,16 +17,17 @@ html {
 
 .custom-scrollbar {
   &::-webkit-scrollbar {
-    width: 15px;
-    height: 15px;
+    width: 12px;
+    height: 12px;
     background: rgba(255, 255, 255, 0.1);
   }
   &::-webkit-scrollbar-thumb {
     border-radius: 7.5px;
-    background: rgba(255, 255, 255, 0.7);
+    background: #FFF;
+    opacity: 0.7;
 
     &:hover {
-      background: rgba(255, 255, 255, 1);
+      opacity: 1;
     }
   }
 }
