--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -31,3 +31,6 @@ $current-next-next-bg: rgba(0, 51, 103, .85);
 //Schedule block colours
 $blocks-sustainer-color: $secondary-color;
 $blocks-regular-color: $off-white-color;
+
+//custom scroll bar
+$custom-scrollbar-color: #FFF;
