--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -13,3 +13,26 @@ html {
   padding-top: 1em;
   padding-bottom: 1em;
 }
+
+
+.custom-scrollbar {
+  &::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: $custom-scrollbar-color;
+    opacity: 0.1;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 7.5px;
+    background: $custom-scrollbar-color;
+    opacity: 0.7;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
