--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -28,7 +28,7 @@
             <div class="col-lg-6">
               <ul class="split-evenly-2 no-bullets">
               {{range .Teams}}
-                <li>{{.Name}}</li>
+                <li><a href="{{url "/teams/"}}/{{.Alias}}/" title="Find out more about {{.Name}}">{{.Name}}</a></li>
               {{end}}
               </ul>
             </div>
