--- a/sass/main.scss
+++ b/sass/main.scss
@@ -109,10 +109,13 @@ footer {
   background-color: $primary-color;
   border-radius: 100%;
   height: 0;
-  margin-top: -3em;
   overflow: hidden;
   padding-bottom: 100%;
   position: relative;
+
+  &.profile {
+    margin-top: -3em;
+  }
 
   img {
     background-position: center center;
