--- a/views/people.tmpl
+++ b/views/people.tmpl
@@ -6,15 +6,15 @@
 <meta name="twitter:creator" content="@{{.PageContext.MainTwitter}}">
 <meta property="og:locale" content="en_GB">
 <meta property="og:title" content="{{.PageContext.ShortName}} | {{.PageData.User.Fname}} {{.PageData.User.Sname}} Profile">
-<meta property="og:url" content="{{.PageContext.FullURL}}{{url "/people/"}}{{.PageData.User.MemberID}}">     
+<meta property="og:url" content="{{.PageContext.FullURL}}{{url "/people/"}}{{.PageData.User.MemberID}}">
 {{if.PageData.User.Bio}}
 <meta property="og:description" content="{{.PageData.User.Bio}}">
 {{else}}
 <meta property="og:description" content="{{.PageData.User.Fname}}, a member of {{.PageContext.LongName}}, the UK’s oldest legal independent radio station. {{.PageContext.ShortName}} is a radio station run by students, for students. Broadcasting across campus on 1350am, and world-wide via our website.">
 {{end}}
 <meta property="og:image" content="{{.PageContext.FullURL}}{{url .PageData.User.Photo}}">
-<meta property="og:type" content="profile"> 
-<meta property="profile:username" content="{{.PageData.User.MemberID}}"> 
+<meta property="og:type" content="profile">
+<meta property="profile:username" content="{{.PageData.User.MemberID}}">
 <meta property="profile:first_name" content="{{.PageData.User.Fname}}">
 <meta property="profile:last_name" content="{{.PageData.User.Sname}}">
   {{end}}
@@ -35,7 +35,7 @@
       <div class="container container-padded">
         <div class="row">
           <div class="col-12 col-lg-3">
-            <div class="user-img">
+            <div class="user-img profile">
               <img class="img-fluid" src="https://ury.org.uk{{.User.Photo}}" alt="Photo of {{.User.Fname}} {{.User.Sname}}">
             </div>
             <div class="row text-muted">
@@ -95,7 +95,7 @@
           {{end}}
           <h2 id="shows">Shows</h2>
           <hr>
-          This person has worked on the following shows: 
+          This person has worked on the following shows:
           <ul class="split-evenly-3">
           {{range .ShowCredits}}
             <li>
