--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -37,13 +37,13 @@
         <h2>Where are URY?</h2>
         <p>URY's studios lie at the very heart of the Campus in our own building at Vanbrugh College.</p>
         <p>But URY's real presence is felt outside of the studio, around the campus at major University and Student Union events, whether we're covering live music, recruiting new Freshers or reporting on major news events.</p>
-        <p><a href="{{url "/contact/#map"}}">Find us on a map!</a></p>
+        <p><a href="{{url "/contact/#map"}}" title="Contact Page">Find us on a map!</a></p>
       </div>
       <div class="col-md-6 col-lg-3">
         <h2>Our Teams</h2>
         <p>Behind the scenes, the main activities involved in running the station are broken down in teams, which contain officers who are responsible for specific areas of station activity.</p>
         <p>URY is proud to have a large active membership, and encourages people to get involved, no matter what they want to do or how much time they can commit.</p>
-        <p><a href="#">Find out more about our teams!</a></p>
+        <p><a href="{{url "/teams/"}}" title="Visit the teams page">Find out more about our teams!</a></p>
       </div>
       <div class="col-md-6 col-lg-3">
         <h2>Our History</h2>
