--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -11,6 +11,8 @@ $news-maroon: #5A162E;
 
 $music-purple: #562179;
 
+$gold: #feb93a;
+
 $primary-color: $ury-blue-color;
 $secondary-color: tint($ury-blue-color, 80%);
 $third-color: tint($ury-blue-color, 60%);
